# feedtown

./: .copilot-instructions.md  .gitignore  AGENTS.md  AI_INSTRUCTIONS.md  CLAUDE.md  Cargo.toml  README.md  devenv.nix  justfile
.github/workflows/: ci.yml  pr-checks.yml
api/: Cargo.toml  README.md
api/src/: handlers.rs  main.rs
db/: Cargo.toml  README.md
db/src/: connection.rs  lib.rs  models.rs  services.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20240827_000001_create_user_table.rs  main.rs
web/: README.md  deno.jsonc  index.html  postcss.config.ts  tailwind.config.ts  tsconfig.json
web/src/: App.tsx  utils.test.ts
web/src/pages/: About.tsx  Home.tsx
