[workspace]
members = [
    "api",
    "db",
    "migration",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matt Kunze <matt.kunze@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"