[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
temp-env = "0.3"