[package]
name = "db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sea-orm = { version = "1.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tokio.workspace = true
dotenvy.workspace = true
tracing.workspace = true
thiserror = "1.0"